--- a/User/index.html
+++ b/User/index.html
@@ -42,7 +42,6 @@
             </div>
         </div>
     </nav>
-
     <section class="content">
         <div class="users">
             <div class="text-center">
@@ -52,11 +51,11 @@
             </div>
         </div>
         <div id="no_user ">
-
         </div>
     </section>
-
-
+<div>
+    
+</div>
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
